<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">扣子</string>
    <string name="login_username_hint">请输入用户名</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_password_confirm_hint">请再次输入密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_txt1">还没有账号？</string>
    <string name="register_txt2">立即注册 ></string>
    <string name="login_account">账号 </string>
    <string name="login_pwd">密码 </string>
    <string name="login_email">确认密码 </string>
    <string name="message_search_hint">搜索&#8230;</string>
    <string name="main_tab_recent">会话</string>
    <string name="main_tab_contact">联系人</string>
    <string name="mian_tab_set">设置</string>
    <string name="main_tab_news">新闻中心</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="add_avator">头像</string>
    <string name="add_nick">昵称</string>
    <string name="add_name">账号</string>
    <string name="add_name_hint">请输入昵称</string>
    <string name="add_gender">性别</string>
    <string name="set_notify">接收新消息通知</string>
    <string name="set_myinfo">个人资料</string>
    <string name="set_voice">声音</string>
    <string name="set_vibrate">震动</string>
    <string name="set_notifacation">允许接收推送消息</string>
    <string name="set_manage_my_uninterested">管理我不感兴趣的标签</string>
    <string name="set_my_puzzle_difficulty">设置我的拼图难度</string>
    <string name="set_about">关于</string>
    <string name="tips">提示</string>
    <string name="logout">退出登陆</string>
    <string name="pop_photo">拍照</string>
    <string name="pop_choose">从手机相册选中</string>
    <string name="network_tips">当前网络不可用,请检查您的网络!</string>
    <string name="toast_error_password_null">密码不能为空</string>
    <string name="toast_error_username_null">用户名不能为空</string>
    <string name="toast_error_comfirm_password">输入的两次密码不一致</string>
    <string name="blacklist">黑名单</string>
    <string name="chat">发起会话</string>
    <string name="play_game">开始解谜游戏</string>
    <string name="restart_game">重新开始</string>
    <string name="add_friend">添加好友</string>
    <string name="send_state">已读</string>
    <string name="longclick_speak">长按说话</string>
    <string name="picture">照片</string>
    <string name="camera">拍摄</string>
    <string name="location">位置</string>
    <string name="black_tips">已添加至黑名单，你将不再收到对方的消息!</string>
    <string name="username">用户名</string>
    <string name="search">搜索</string>
    <string name="new_friends">新朋友</string>
    <string name="near_people">附近的人</string>
    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    <string name="voice_seconds_tips">还可以说%1$s秒</string>
    <string name="voice_short_tips">录音时间太短</string>
    <string name="complete_the_game">完成解谜游戏才可添加对方为好友哦~</string>
    <string name="back">返回</string>
    <string name="shake">摇一摇，查看附近的人</string>
    <string name="notify_uninterested">不感\n兴趣</string>
    <string name="switcher">switcher</string>
    <string name="agree">同意</string>
    <string name="puzzle_default_time">60s</string>
    <string name="browser_close">关闭</string>
    <string name="delete">删除</string>
    <string name="browser_menu">菜单</string>
    <string name="about_features">版本特性</string>
    <string name="about_update">检查更新</string>
    <string name="about_main_page">项目主页</string>
    <string name="about_team">扣子团队 2015</string>
    <string name="update">更新</string>
    <string name="update_install">下载完成，点击安装</string>

</resources>