<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_bg_color"
    android:orientation="vertical" >

    <include
        android:id="@+id/common_actionbar"
        layout="@layout/include_action_bar" />

    <RelativeLayout
        android:id="@+id/layout_set_avator"
        style="@style/Register_Input"
        android:layout_height="wrap_content"
        android:clickable="true" >

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/add_avator"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_set_avator"
            style="@style/Smile.ImageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/add_avator"
            android:padding="5dp"
            android:src="@drawable/head" />
    </RelativeLayout>

    <LinearLayout style="@style/Register_Input" >

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/add_gender"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner"
            style="@style/Register_Edit" />
    </LinearLayout>

    <LinearLayout style="@style/Register_Input" >

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/add_nick"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_nick"
            style="@style/Register_Edit"
            android:hint="@string/add_name_hint" />
    </LinearLayout>

    <LinearLayout style="@style/Register_Input" >

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/login_account"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_username"
            style="@style/Register_Edit"
            android:hint="@string/login_username_hint" />
    </LinearLayout>

    <LinearLayout style="@style/Register_Input" >

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/login_pwd"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_password"
            style="@style/Register_Edit"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout style="@style/Register_Input" >

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/login_email"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_password_confirm"
            style="@style/Register_Edit"
            android:hint="@string/login_password_confirm_hint"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/base_action_bar_height"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@drawable/btn_login_selector"
        android:text="@string/register"
        android:textColor="@color/base_color_text_white"
        android:textSize="@dimen/text_size_large" />

</LinearLayout>