<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <include
            android:id="@+id/common_actionbar"
            layout="@layout/include_action_bar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="50dp"
            android:drawableLeft="@drawable/icon"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:text="@string/app_name"
            android:textColor="#111"
            android:textSize="25sp"
            android:typeface="monospace" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/base_line_width_2"
            android:layout_marginTop="20dp"
            android:background="@drawable/base_horizontal_line" >
        </View>

        <RelativeLayout
            android:id="@+id/rl_about_features"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_selector"
            android:padding="10dip" >

            <TextView
                style="@style/Smile.TextView._Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/about_features" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/register_bottom_arrow"
                android:contentDescription="@string/about_features" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/base_line_width_2"
            android:background="@drawable/base_horizontal_line" >
        </View>

        <RelativeLayout
            android:id="@+id/rl_about_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_selector"
            android:padding="10dip" >

            <TextView
                style="@style/Smile.TextView._Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/about_update" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/register_bottom_arrow"
                android:contentDescription="@string/about_update" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/base_line_width_2"
            android:background="@drawable/base_horizontal_line" >
        </View>

        <RelativeLayout
            android:id="@+id/rl_about_main_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_selector"
            android:padding="10dip" >

            <TextView
                style="@style/Smile.TextView._Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/about_main_page" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/register_bottom_arrow"
                android:contentDescription="@string/about_main_page" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/base_line_width_2"
            android:background="@drawable/base_horizontal_line" >
        </View>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:gravity="center_horizontal"
        android:text="@string/about_team"
        android:textColor="#999"
        android:textSize="18sp" />

</RelativeLayout>